# github_actions_demo

./: README.md  R_maps.Rmd  geographic_transformation_example.R  github_actions_anex.pptx  main.py  pyproject.toml  python_maps.ipynb  query.py
.github/workflows/: main.yml
output/: block_centroids.parquet  boro_centroids.parquet  boro_polygons.parquet  nbhd_centroids.parquet  nbhd_polygons.parquet
tests/: test_query.py
