[project]
name = "geospatial-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcgis>=2.2.0.4",
    "contextily>=1.6.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=7.8.5",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "shapely>=2.1.1",
]

[tool.uv]
allow-insecure-host = ["pypi.org", "files.pythonhosted.org", "github.com"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
